# So2Projekt

./: CMakeLists.txt  main.cpp  makefile  so2p
Sources/: Ball.cpp  Ball.h
