cmake_minimum_required(VERSION 3.21)
project(So2Projekt)
set(CMAKE_CXX_STANDARD 14)
find_package(Curses REQUIRED)
include_directories(${CURSES_INCLUDE_DIR})
set(CMAKE_CXX_FLAGS "-lncurses")
add_executable(So2Projekt main.cpp Sources/Ball.h Sources/Ball.cpp)
target_link_libraries(So2Projekt main.cpp ${CURSES_LIBRARIES})